--- a/DockerDers/app/templates/dashboard.html
+++ b/DockerDers/app/templates/dashboard.html
@@ -104,6 +104,9 @@
     </style>
   </head>
   <body>
+    <div class="btn-box">
+      <a href="/girisyap">Let's Talk</a>
+    </div>
     <section class="ticket">
       <div class="ticket-details">
         <h2>Your Support Ticket</h2>
